replace url redirection

--- a/about.html
+++ b/about.html
@@ -12,10 +12,10 @@
         <span class="red">Afrik Hub</span> <span class="blue">INFORMATIK</span>
       </h1>
       <nav>
-        <a href="index.html">Accueil</a>
-        <a href="about.html" class="active">À propos</a>
-        <a href="services.html">Services</a>
-        <a href="contact.html">Contact</a>
+        <a href="/">Accueil</a>
+        <a href="/à Propos">À propos</a>
+        <a href="/services">Services</a>
+        <a href="/contact">Contact</a>
       </nav>
     </header>
 
@@ -28,7 +28,7 @@
           informatiques, le développement web, la maintenance professionnelle et
           le commerce général.
         </p>
-        <a href="services.html" class="btn-primary">Découvrir nos services</a>
+        <a href="/services" class="btn-primary">Découvrir nos services</a>
       </div>
       <img
         src="images/about/about-hero.jpg"
@@ -124,7 +124,7 @@
       <p>
         Nous sommes disponibles pour tout projet informatique ou commercial.
       </p>
-      <a href="contact.html" class="btn-primary">Nous contacter</a>
+      <a href="/contact" class="btn-primary">Nous contacter</a>
     </section>
 
     <footer>
