--- a/contact.html
+++ b/contact.html
@@ -13,10 +13,10 @@
         <span class="red">Afrik Hub</span> <span class="blue">INFORMATIK</span>
       </h1>
       <nav>
-        <a href="index.html">Accueil</a>
-        <a href="about.html">À propos</a>
-        <a href="services.html">Services</a>
-        <a href="contact.html" class="active">Contact</a>
+        <a href="/">Accueil</a>
+        <a href="/à Propos">À propos</a>
+        <a href="/services">Services</a>
+        <a href="/contact">Contact</a>
       </nav>
     </header>
 
@@ -89,7 +89,8 @@
         </form>
 
         <p class="form-success" id="formSuccess">
-          ✔ Votre message a été envoyé avec succès !
+          ✔ Votre message a été envoyé avec succès ! Nous vous reviendrons au
+          plus vite.
         </p>
       </div>
     </section>
