--- a/index.html
+++ b/index.html
@@ -12,10 +12,10 @@
         <span class="red">Afrik Hub</span> <span class="blue">INFORMATIK</span>
       </h1>
       <nav>
-        <a href="index.html">Accueil</a>
-        <a href="about.html">À propos</a>
-        <a href="services.html">Services</a>
-        <a href="contact.html">Contact</a>
+        <a href="/">Accueil</a>
+        <a href="/à Propos">À propos</a>
+        <a href="/services">Services</a>
+        <a href="/contact">Contact</a>
       </nav>
     </header>
     <section class="home-section fade-in">
@@ -36,7 +36,7 @@
             Réparation, optimisation, installation de systèmes et dépannage
             rapide.
           </p>
-          <a href="services.html" class="btn-read">En savoir plus</a>
+          <a href="/services" class="btn-read">En savoir plus</a>
         </div>
 
         <div class="service-card">
@@ -47,7 +47,7 @@
           <p>
             Création de sites modernes, applications web et solutions digitales.
           </p>
-          <a href="services.html" class="btn-read">En savoir plus</a>
+          <a href="/services" class="btn-read">En savoir plus</a>
         </div>
 
         <div class="service-card">
@@ -58,7 +58,7 @@
           <p>
             Vente d’ordinateurs, imprimantes, accessoires et matériels divers.
           </p>
-          <a href="services.html" class="btn-read">En savoir plus</a>
+          <a href="/services" class="btn-read">En savoir plus</a>
         </div>
       </div>
     </section>
@@ -106,7 +106,7 @@
         Contactez-nous dès maintenant pour obtenir un devis gratuit ou une
         assistance.
       </p>
-      <a href="contact.html" class="btn-primary">Nous contacter</a>
+      <a href="/contact" class="btn-primary">Nous contacter</a>
     </section>
 
     <footer>
