--- a/services.html
+++ b/services.html
@@ -12,10 +12,10 @@
         <span class="red">Afrik Hub</span> <span class="blue">INFORMATIK</span>
       </h1>
       <nav>
-        <a href="index.html">Accueil</a>
-        <a href="about.html">À propos</a>
-        <a href="services.html" class="active">Services</a>
-        <a href="contact.html">Contact</a>
+        <a href="/">Accueil</a>
+        <a href="/à Propos">À propos</a>
+        <a href="/services">Services</a>
+        <a href="/contact">Contact</a>
       </nav>
     </header>
 
@@ -27,7 +27,7 @@
           Solutions informatiques complètes : maintenance, développement,
           réseaux, hébergement, commerce et prestations sur mesure.
         </p>
-        <a href="contact.html" class="btn-primary">Demander un devis</a>
+        <a href="/contact" class="btn-primary">Demander un devis</a>
       </div>
       <img src="images/IT.jpg" class="hero-img" alt="IT Services" />
     </section>
@@ -47,7 +47,7 @@
             Assistance, installation logicielle, configuration systèmes et
             gestion des outils informatiques pour particuliers et entreprises.
           </p>
-          <a href="contact.html" class="btn-read">Demander un devis</a>
+          <a href="/contact" class="btn-read">Demander un devis</a>
         </div>
 
         <!-- Création d’Application -->
@@ -60,7 +60,7 @@
             Applications web & mobile modernes, avec bases de données sécurisées
             et interfaces ergonomiques.
           </p>
-          <a href="contact.html" class="btn-read">Demander un devis</a>
+          <a href="/contact" class="btn-read">Demander un devis</a>
         </div>
 
         <!-- Maintenance Informatique -->
@@ -73,7 +73,7 @@
             Dépannage PC, suppression virus, optimisation, formatage,
             remplacement de pièces et récupération de données.
           </p>
-          <a href="contact.html" class="btn-read">Demander un devis</a>
+          <a href="/contact" class="btn-read">Demander un devis</a>
         </div>
 
         <!-- Maintenance Réseau -->
@@ -86,7 +86,7 @@
             Installation routeurs, câblage réseau, sécurisation Wi-Fi, solutions
             LAN/WAN pour entreprises.
           </p>
-          <a href="contact.html" class="btn-read">Demander un devis</a>
+          <a href="/contact" class="btn-read">Demander un devis</a>
         </div>
 
         <!-- Hébergement Web -->
@@ -99,7 +99,7 @@
             Hébergement fiable, nom de domaine, configuration messagerie pro et
             sécurité SSL.
           </p>
-          <a href="contact.html" class="btn-read">Demander un devis</a>
+          <a href="/contact" class="btn-read">Demander un devis</a>
         </div>
 
         <!-- Développement Web -->
@@ -112,7 +112,7 @@
             Création de sites vitrines, e-commerce, applications web et
             solutions professionnelles.
           </p>
-          <a href="contact.html" class="btn-read">Demander un devis</a>
+          <a href="/contact" class="btn-read">Demander un devis</a>
         </div>
 
         <!-- Prestations de Services -->
@@ -128,7 +128,7 @@
             Support technique, assistance entreprise, formations, automatisation
             & conseils informatiques.
           </p>
-          <a href="contact.html" class="btn-read">Demander un devis</a>
+          <a href="/contact" class="btn-read">Demander un devis</a>
         </div>
 
         <!-- Import-Export -->
@@ -144,7 +144,7 @@
             Achat, envoi et distribution de produits technologiques & matériels
             informatiques internationaux.
           </p>
-          <a href="contact.html" class="btn-read">Demander un devis</a>
+          <a href="/contact" class="btn-read">Demander un devis</a>
         </div>
 
         <!-- Commerce Général -->
@@ -157,7 +157,7 @@
             Vente d’ordinateurs, imprimantes, accessoires, consommables et
             équipements divers.
           </p>
-          <a href="contact.html" class="btn-read">Demander un devis</a>
+          <a href="/contact" class="btn-read">Demander un devis</a>
         </div>
       </div>
     </section>
@@ -166,7 +166,7 @@
     <section class="cta-section fade-in">
       <h2>Besoin d’un service informatique ?</h2>
       <p>Contactez-nous pour un devis gratuit et une assistance rapide.</p>
-      <a href="contact.html" class="btn-primary">Nous contacter</a>
+      <a href="/contact" class="btn-primary">Nous contacter</a>
     </section>
 
     <footer>
