--- a/services.html
+++ b/services.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8" />
     <title>Services | Afrik Hub INFORMATIK</title>
     <link rel="stylesheet" href="styles.css" />
+    <link rel="icon" type="image/png" href="images/africa.png" />
+  </head>
   </head>
   <body>
     <header>
@@ -13,7 +15,7 @@
       </h1>
       <nav>
         <a href="/">Accueil</a>
-        <a href="/à Propos">À propos</a>
+        <a href="/a-Propos">À propos</a>
         <a href="/services">Services</a>
         <a href="/contact">Contact</a>
       </nav>
